--- a/index.html
+++ b/index.html
@@ -1,69 +1,59 @@
-Html Webpack Plugin:
-<pre>
-  Error: Child compilation failed:
-  Module not found: Error: Can't resolve 'C:\Users\cauec\repos\todo-list\src\index.html' in 'C:\Users\cauec\repos\todo-l  ist'
-  ModuleNotFoundError: Module not found: Error: Can't resolve 'C:\Users\cauec\repos\todo-list\src\index.html' in 'C:\Use  rs\cauec\repos\todo-list'
-      at C:\Users\cauec\repos\todo-list\node_modules\webpack\lib\Compilation.js:2029:28
-      at C:\Users\cauec\repos\todo-list\node_modules\webpack\lib\NormalModuleFactory.js:895:13
-      at eval (eval at create (C:\Users\cauec\repos\todo-list\node_modules\tapable\lib\HookCodeFactory.js:33:10), <anony  mous>:10:1)
-      at C:\Users\cauec\repos\todo-list\node_modules\webpack\lib\NormalModuleFactory.js:332:22
-      at eval (eval at create (C:\Users\cauec\repos\todo-list\node_modules\tapable\lib\HookCodeFactory.js:33:10), <anony  mous>:9:1)
-      at C:\Users\cauec\repos\todo-list\node_modules\webpack\lib\NormalModuleFactory.js:509:22
-      at C:\Users\cauec\repos\todo-list\node_modules\webpack\lib\NormalModuleFactory.js:151:11
-      at C:\Users\cauec\repos\todo-list\node_modules\webpack\lib\NormalModuleFactory.js:767:25
-      at C:\Users\cauec\repos\todo-list\node_modules\webpack\lib\NormalModuleFactory.js:979:8
-      at C:\Users\cauec\repos\todo-list\node_modules\webpack\lib\NormalModuleFactory.js:1109:5
-  
-  - Compilation.js:2029 
-    [todo-list]/[webpack]/lib/Compilation.js:2029:28
-  
-  - NormalModuleFactory.js:895 
-    [todo-list]/[webpack]/lib/NormalModuleFactory.js:895:13
-  
-  
-  - NormalModuleFactory.js:332 
-    [todo-list]/[webpack]/lib/NormalModuleFactory.js:332:22
-  
-  
-  - NormalModuleFactory.js:509 
-    [todo-list]/[webpack]/lib/NormalModuleFactory.js:509:22
-  
-  - NormalModuleFactory.js:151 
-    [todo-list]/[webpack]/lib/NormalModuleFactory.js:151:11
-  
-  - NormalModuleFactory.js:767 
-    [todo-list]/[webpack]/lib/NormalModuleFactory.js:767:25
-  
-  - NormalModuleFactory.js:979 
-    [todo-list]/[webpack]/lib/NormalModuleFactory.js:979:8
-  
-  - NormalModuleFactory.js:1109 
-    [todo-list]/[webpack]/lib/NormalModuleFactory.js:1109:5
-  
-  - child-compiler.js:174 
-    [todo-list]/[html-webpack-plugin]/lib/child-compiler.js:174:18
-  
-  - Compiler.js:564 finalCallback
-    [todo-list]/[webpack]/lib/Compiler.js:564:5
-  
-  - Compiler.js:590 
-    [todo-list]/[webpack]/lib/Compiler.js:590:11
-  
-  - Compiler.js:1213 
-    [todo-list]/[webpack]/lib/Compiler.js:1213:17
-  
-  
-  - Hook.js:18 Hook.CALL_ASYNC_DELEGATE [as _callAsync]
-    [todo-list]/[tapable]/lib/Hook.js:18:14
-  
-  - Compiler.js:1209 
-    [todo-list]/[webpack]/lib/Compiler.js:1209:33
-  
-  - Compilation.js:2802 finalCallback
-    [todo-list]/[webpack]/lib/Compilation.js:2802:11
-  
-  - Compilation.js:3107 
-    [todo-list]/[webpack]/lib/Compilation.js:3107:11
-  
-  
-</pre><script defer src="assets/main.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Todo List</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body class="d-flex flex-column align-items-center">
+  <header>
+
+  </header>
+  <div class="container row g-0">
+
+    <h1 class="text-center">todo.List</h1>
+    <aside class="col-4">
+      <nav>
+        <h5>Projects List</h5>
+        <ul class="list-unstyled">
+          <li class="ps-3">Project 1</li>
+          <li class="ps-3">Project 2</li>
+          <li class="ps-3">Project 3</li>
+        </ul>
+      </nav>
+    </aside>
+    <main class="col">
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Add a new todo">
+        <button class="btn btn-primary">Add</button>
+      </div>
+
+      <ul id="listItems" class="list-group">
+        <li class="list-group-item d-flex align-items-center gap-1 ">
+          <input type="checkbox" class="form-check-input me-3">
+          <span class="flex-fill">Todo item 1</span>
+          <code class="small text-muted">Project 1</code>
+          <button class="btn btn-warning ">Edit</button>
+          <button class="btn btn-danger">Delete</button>
+        </li>
+        <li class="list-group-item d-flex align-items-center">
+          <input type="checkbox" class="form-check-input me-3">
+          <span class="flex-fill">Todo item 2</span>
+
+          <button class="btn btn-danger">Delete</button>
+        </li>
+        <li class="list-group-item d-flex align-items-center">
+          <input type="checkbox" class="form-check-input me-3">
+          <span class="flex-fill">Todo item 3</span>
+          <button class="btn btn-danger">Delete</button>
+        </li>
+      </ul>
+    </main>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script defer src="assets/main.js"></script></body>
+
+</html>
