--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,6 @@
 
   </header>
   <div class="container row g-0">
-
     <h1 class="text-center">todo.List</h1>
     <aside class="col-4">
       <nav>
@@ -31,26 +30,30 @@
         <button class="btn btn-primary">Add</button>
       </div>
 
-      <ul id="listItems" class="list-group">
-        <li class="list-group-item d-flex align-items-center gap-1 ">
-          <input type="checkbox" class="form-check-input me-3">
-          <span class="flex-fill">Todo item 1</span>
-          <code class="small text-muted">Project 1</code>
-          <button class="btn btn-warning ">Edit</button>
-          <button class="btn btn-danger">Delete</button>
-        </li>
-        <li class="list-group-item d-flex align-items-center">
-          <input type="checkbox" class="form-check-input me-3">
-          <span class="flex-fill">Todo item 2</span>
+      <div class="accordion" id="list">
+        <div class="accordion-item">
+          <h2 class="accordion-header p-1  d-flex align-items-center gap-1">
+            <input type="checkbox" class="form-check-input mt-0 ">
+            <button class="accordion-button collapsed flex-fill " type="button" data-bs-toggle="collapse" aria-expanded="false"
+              data-bs-target="#item-01">
+              <span class="flex-fill ">Accordion Item #1</span>
+              <code class="small text-muted">Project 1</code>
+            </button>
+          </h2>
+          <div id="item-01" class="accordion-collapse collapse" aria-labelledby="headingOne"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse
+              plugin adds the appropriate classes that we use to style each element. These classes control the overall
+              appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom
+              CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
+              <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+      </div>
 
-          <button class="btn btn-danger">Delete</button>
-        </li>
-        <li class="list-group-item d-flex align-items-center">
-          <input type="checkbox" class="form-check-input me-3">
-          <span class="flex-fill">Todo item 3</span>
-          <button class="btn btn-danger">Delete</button>
-        </li>
-      </ul>
+
     </main>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
