--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo List</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body class="d-flex flex-column align-items-center">
@@ -26,8 +27,16 @@
     </aside>
     <main class="col">
       <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Add a new todo">
-        <button class="btn btn-primary">Add</button>
+        <input id="addItem" type="text" class="form-control" placeholder="Add a new todo">
+        <button class="btn btn-outline-warning d-none" title="Adicionar mais informações">+</button>
+        <button class="btn btn-warning text-light">Add</button>
+        <div class="date">
+          <input id="dueDate" class="date form-control" type="text" placeholder="DD/MM/AAAA">
+          <a class="input-button" title="toggle" data-toggle>
+            <i class=" text-warning small  bi bi-calendar"></i>
+          </a>
+          
+        </div>
       </div>
 
       <div class="accordion" id="list"></div>
